--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 
 <head>
 
-  <title>Festival</title>
+  <title>MoonLight Event</title>
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+  <link rel="icon" href="img/logo1.png">
   <!-- Bootstrap CSS -->
   <!-- <link rel="stylesheet" href="css/A.css"> -->
   <link rel="stylesheet" href="bootstrap-4.6.2-dist/css/bootstrap.min.css" />
