--- a/header.html
+++ b/header.html
@@ -37,7 +37,7 @@
                                     <div id="mySidenav" class="sidenav">
                                         <div class="textnav row">
                                             <div class="col-lg-4 img-cart"><img
-                                                    src="https://scontent.fhan3-1.fna.fbcdn.net/v/t39.30808-6/299708655_582080843399346_7216765241218442958_n.png?_nc_cat=1&ccb=1-7&_nc_sid=730e14&_nc_ohc=V4n00SvGEl4AX-r6TRn&_nc_ht=scontent.fhan3-1.fna&oh=00_AT_ATsC6rBFYc8aPla8L8EJ_7JKXd4sk8TCTbJWQij1rmQ&oe=630545BC"
+                                                    src="img/botot.jpg"
                                                     class="img-fluid ${3|rounded-top,rounded-right,rounded-bottom,rounded-left,rounded-circle,|}"
                                                     alt=""></div>
                                             <div class="col-lg-8">
@@ -46,7 +46,7 @@
                                         </div>
                                         <div class="textnav row">
                                             <div class="col-lg-4 img-cart"><img
-                                                    src="https://scontent.fhan3-1.fna.fbcdn.net/v/t39.30808-6/299708655_582080843399346_7216765241218442958_n.png?_nc_cat=1&ccb=1-7&_nc_sid=730e14&_nc_ohc=V4n00SvGEl4AX-r6TRn&_nc_ht=scontent.fhan3-1.fna&oh=00_AT_ATsC6rBFYc8aPla8L8EJ_7JKXd4sk8TCTbJWQij1rmQ&oe=630545BC"
+                                                    src="img/dauvat.jpg"
                                                     class="img-fluid ${3|rounded-top,rounded-right,rounded-bottom,rounded-left,rounded-circle,|}"
                                                     alt=""></div>
                                             <div class="col-lg-8">
@@ -55,7 +55,7 @@
                                         </div>
                                         <div class="textnav row">
                                             <div class="col-lg-4 img-cart"><img
-                                                    src="https://scontent.fhan3-1.fna.fbcdn.net/v/t39.30808-6/299708655_582080843399346_7216765241218442958_n.png?_nc_cat=1&ccb=1-7&_nc_sid=730e14&_nc_ohc=V4n00SvGEl4AX-r6TRn&_nc_ht=scontent.fhan3-1.fna&oh=00_AT_ATsC6rBFYc8aPla8L8EJ_7JKXd4sk8TCTbJWQij1rmQ&oe=630545BC"
+                                                    src="img/demtrang.jpg"
                                                     class="img-fluid ${3|rounded-top,rounded-right,rounded-bottom,rounded-left,rounded-circle,|}"
                                                     alt=""></div>
                                             <div class="col-lg-8">
@@ -64,7 +64,7 @@
                                         </div>
                                         <div class="textnav row">
                                             <div class="col-lg-4 img-cart"><img
-                                                    src="https://scontent.fhan3-1.fna.fbcdn.net/v/t39.30808-6/299708655_582080843399346_7216765241218442958_n.png?_nc_cat=1&ccb=1-7&_nc_sid=730e14&_nc_ohc=V4n00SvGEl4AX-r6TRn&_nc_ht=scontent.fhan3-1.fna&oh=00_AT_ATsC6rBFYc8aPla8L8EJ_7JKXd4sk8TCTbJWQij1rmQ&oe=630545BC"
+                                                    src="img/denlonghawaii.jpg"
                                                     class="img-fluid ${3|rounded-top,rounded-right,rounded-bottom,rounded-left,rounded-circle,|}"
                                                     alt=""></div>
                                             <div class="col-lg-8">
@@ -73,7 +73,7 @@
                                         </div>
                                         <div class="textnav row">
                                             <div class="col-lg-4 img-cart"><img
-                                                    src="https://scontent.fhan3-1.fna.fbcdn.net/v/t39.30808-6/299708655_582080843399346_7216765241218442958_n.png?_nc_cat=1&ccb=1-7&_nc_sid=730e14&_nc_ohc=V4n00SvGEl4AX-r6TRn&_nc_ht=scontent.fhan3-1.fna&oh=00_AT_ATsC6rBFYc8aPla8L8EJ_7JKXd4sk8TCTbJWQij1rmQ&oe=630545BC"
+                                                    src="img/dentroi.jpg"
                                                     class="img-fluid ${3|rounded-top,rounded-right,rounded-bottom,rounded-left,rounded-circle,|}"
                                                     alt=""></div>
                                             <div class="col-lg-8">
@@ -82,7 +82,7 @@
                                         </div>
                                         <div class="textnav row">
                                             <div class="col-lg-4 img-cart"><img
-                                                    src="https://scontent.fhan3-1.fna.fbcdn.net/v/t39.30808-6/299708655_582080843399346_7216765241218442958_n.png?_nc_cat=1&ccb=1-7&_nc_sid=730e14&_nc_ohc=V4n00SvGEl4AX-r6TRn&_nc_ht=scontent.fhan3-1.fna&oh=00_AT_ATsC6rBFYc8aPla8L8EJ_7JKXd4sk8TCTbJWQij1rmQ&oe=630545BC"
+                                                    src="img/duathuyen.jpg"
                                                     class="img-fluid ${3|rounded-top,rounded-right,rounded-bottom,rounded-left,rounded-circle,|}"
                                                     alt=""></div>
                                             <div class="col-lg-8">
@@ -91,7 +91,7 @@
                                         </div>
                                         <div class="textnav row">
                                             <div class="col-lg-4 img-cart"><img
-                                                    src="https://scontent.fhan3-1.fna.fbcdn.net/v/t39.30808-6/299708655_582080843399346_7216765241218442958_n.png?_nc_cat=1&ccb=1-7&_nc_sid=730e14&_nc_ohc=V4n00SvGEl4AX-r6TRn&_nc_ht=scontent.fhan3-1.fna&oh=00_AT_ATsC6rBFYc8aPla8L8EJ_7JKXd4sk8TCTbJWQij1rmQ&oe=630545BC"
+                                                    src="img/ganesha.jpg"
                                                     class="img-fluid ${3|rounded-top,rounded-right,rounded-bottom,rounded-left,rounded-circle,|}"
                                                     alt=""></div>
                                             <div class="col-lg-8">
