edit index and news.html
fixed top header and add autoplay, loop for video in news

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <body ng-app="myApp" ng-controller="appCtrl">
 
 
-  <div ng-include="'header.html'"></div>
+  <div ng-include="'header.html'" class="sticky-top"></div>
   <div ng-view></div>
   <div ng-include="'footer.html'"></div>
 
